# heic2jpeg

./: README.md  pyproject.toml  requirements.txt
heic2jpeg/: main.py
